--- a/markup.html
+++ b/markup.html
@@ -9,10 +9,11 @@
     @import url('https://cdn.jsdelivr.net/npm/@typopro/web-iosevka/TypoPRO-Iosevka.css');
     .markup.variable { --color: red; }
     .markup.keyword { --color: olive;  }
-    .markup.punctuator { --color: skyblue; font-weight: bolder; }
+    .markup.punctuator { --color: green; font-weight: 400;}
     /* .punctuation { --color: lightblue; } */
     .markup.sequence { --color: grey; }
     .markup.operator { --color: limegreen; }
+    .markup.combinator { --color: skyblue; }
     .markup.breaker { --color: grey; }
     .markup.quote, .markup.\@quote { --color: teal; }
     .markup.opener, .markup.closer { --color: orange }
@@ -38,7 +39,7 @@
     #source-code {
       background-color: #F9F9F9;
       line-height: 1.375em;
-      text-shadow: 0 1.5px 0 #FFF;
+      text-shadow: 0 1px 0 #FFF;
       text-rendering: optimizeLegibility;
       color: #444;
       font-family: 'Iosevka', 'TypoPRO Iosevka Term', monospace;
@@ -57,7 +58,19 @@
     import './lib/markup-modes.js';
     import {markup} from './lib/markup.js';
 
-    const sourceCodeElement = document.body.querySelector('pre#source-code');
+    const defaults = {
+      repeats: 0,
+      iterations: 0,
+      sourceURL: './lib/markup.js',
+      sourceType: undefined,
+      element: 'pre#source-code',
+    }
+
+    const options = {
+      ... defaults
+    };
+
+    const sourceCodeElement = document.querySelector(options.element);
 
     const loadFromURL = async (specifier) => {
       let fetched, response, result;
@@ -83,34 +96,38 @@
 
     let defaultSoutceType = location.search && location.search.slice(1);
 
+    const renderMarkup = (target, sourceText, markupOptions) => {
+      const nodes = sourceText ? [...  markup(sourceText, markupOptions)] : [];
+      while (nodes.length > 500) target.append(... nodes.splice(0, 500));
+      nodes.length && target.append(... nodes);
+      return nodes;
+    }
+
     const renderFromURL = async (specifier, sourceType = defaultSoutceType) => {
-      let elements, returned;
+
+      let returned;
+      const {repeats = 1, iterations = 1} = options;
 
       await nextFrame();
-
       sourceCodeElement.innerText = `Loading "${specifier}"…`;
 
       try {
         const {sourceText, response} = await loadFromURL(specifier);
+        const markupOptions = {sourceType};
 
         await nextFrame();
-
         sourceType || (sourceType = response.headers.get('Content-Type'));
         sourceCodeElement.innerText = `Rendering "${specifier}"…`;
-
         await nextFrame();
-
         sourceType && (sourceType = sourceType.split(';', 1)[0]);
-
-        // for (let n = 100; n--;) [...  markup(sourceText, {sourceType})];
-        // elements = sourceText ? spread(markup(sourceText, {sourceType})) : [];
-        elements = sourceText ? [...  markup(sourceText, {sourceType})] : [];
         sourceCodeElement.innerText = '';
-        // sourceCodeElement.innerHTML = `<div>${sourceType}</div>`;
-        while (elements.length > 500) {
-          sourceCodeElement.append(... elements.splice(0, 500));
-        }
-        elements.length && sourceCodeElement.append(... elements);
+
+        const elements = renderMarkup(sourceCodeElement, sourceText, markupOptions);
+
+        if (iterations > 0) for (let n = iterations; n--; [...  markup(sourceText, markupOptions)]);
+
+        if (repeats > 0) for (let n = repeats; n--; renderMarkup(sourceCodeElement, sourceText, markupOptions));
+
         return returned = elements;
 
       } finally {
@@ -125,7 +142,7 @@
 
     window.addEventListener('hashchange', () => renderFromHash());
 
-    requestAnimationFrame(() => renderFromHash(location.hash !== '#' && location.hash || '#./lib/markup.js'));
+    requestAnimationFrame(() => renderFromHash(location.hash !== '#' && location.hash || `#${defaults.sourceURL}`));
 
   </script>
 </body>
