--- a/markup.html
+++ b/markup.html
@@ -7,17 +7,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="./markup.css">
   <style>
+    body {
+      margin: 0;
+      display: grid;
+      min-height: 100vh;
+      background-color: #999;
+    }
+
     #source-code {
-      background-color: #F9F9F9;
+      --markup-background: #F9F9F9;
+      --markup-color: #444;
+      --markup-shadow: #FFF;
+      --markup-variables: red;
+      --markup-keywords: olive;
+      --markup-punctators: green;
+      --markup-sequences: grey;
+      --markup-operators: limegreen;
+      --markup-combinator: steelblue;
+      --markup-breakers: grey;
+      --markup-quotes: teal;
+      --markup-closures: orange;
+      --markup-spans: coral;
+      --markup-comments: #AAA;
+      --markup-whitespace: #999;
+
+      background-color: var(--markup-background, #444);
       line-height: 1.375em;
-      text-shadow: 0 1px 0 #FFF;
+      text-shadow: 0 1px 0 var(--markup-shadow, #FFF);
       text-rendering: optimizeLegibility;
-      color: #444;
+      color: var(--markup-color, #444);
       font-family: 'Iosevka', 'TypoPRO Iosevka Term', monospace;
       font-variant-ligatures: contextual;
       white-space: pre-wrap;
-      /* box-sizing: content-box; */
+      position: relative;
+      padding: 1ch;
+      margin: 0;
     }
+
+    #source-code > header {
+      /* font-family: system-ui; */
+      font-weight: 300;
+      white-space: pre;
+      background: #9993;
+      color: #999;
+      margin-bottom: 1ch;
+      opacity: 0.8;
+      border-radius: 1ch;
+    }
+
   </style>
 </head>
 
@@ -37,7 +74,7 @@
     const options = {
       ... defaults,
       // iterations: 500,
-      // repeats: 50,
+      // repeats: 0,
     };
 
     const sourceCodeElement = document.querySelector(options.element);
@@ -64,24 +101,21 @@
       return items;
     }
 
-    let defaultSoutceType = location.search && location.search.slice(1);
+    // let defaultSoutceType = location.search && location.search.slice(1);
 
     const renderMarkup = (sourceText, markupOptions) => {
       const target = document.createDocumentFragment();
       const nodes = sourceText ? [...  markup(sourceText, markupOptions)] : [];
-      while (nodes.length > 500) target.append(... nodes.splice(0, 500));
-      nodes.length && target.append(... nodes);
+      if (target.append) {
+        while (nodes.length > 500) target.append(... nodes.splice(0, 500));
+        nodes.length && target.append(... nodes);
+      } else if (target.appendChild) {
+        for (const node of nodes) target.appendChild(node);
+      }
       return target;
     }
 
-    // const renderMarkup = (target, sourceText, markupOptions) => {
-    //   const nodes = sourceText ? [...  markup(sourceText, markupOptions)] : [];
-    //   while (nodes.length > 500) target.append(... nodes.splice(0, 500));
-    //   nodes.length && target.append(... nodes);
-    //   return nodes;
-    // }
-
-    const renderFromURL = async (specifier, sourceType = defaultSoutceType) => {
+    const renderFromURL = async (specifier, sourceType) => {
 
       let returned;
       const {repeats = 1, iterations = 1} = options;
@@ -91,22 +125,24 @@
 
       try {
         const {sourceText, response} = await loadFromURL(specifier);
+
+        (sourceType = sourceType || response.headers.get('Content-Type') || options.sourceType) && (sourceType = sourceType.split(';', 1)[0]);
+
         const markupOptions = {sourceType};
 
         await nextFrame();
-        sourceType || (sourceType = response.headers.get('Content-Type'));
-        sourceCodeElement.innerText = `Rendering "${specifier}"…`;
+
+        sourceCodeElement.innerHTML = `<header><center><label>source=<q><b>${specifier}</b></q></label>  <label>type=<q><b>${sourceType}</b></q></label>  <label>repeats=<b>${(repeats || 0) + 1}</b></label>  <label>iterations=<b>${(iterations || 0) + 1}</b></label></center></header>`;
+
         await nextFrame();
-        sourceType && (sourceType = sourceType.split(';', 1)[0]);
-        sourceCodeElement.innerText = '';
 
         const fragment = renderMarkup(sourceText, markupOptions);
 
-        sourceCodeElement.append(fragment);
+        sourceCodeElement.appendChild(fragment);
 
         if (iterations > 0) for (let n = iterations; n--; [...  markup(sourceText, markupOptions)]);
 
-        if (repeats > 0) for (let n = repeats; n--; sourceCodeElement.append(renderMarkup(sourceText, markupOptions))); //  n % 10 || await nextFrame();
+        if (repeats > 0) for (let n = repeats; n--; sourceCodeElement.appendChild(renderMarkup(sourceText, markupOptions))); //  n % 10 || await nextFrame();
 
         return returned = fragment;
       } finally {
@@ -115,13 +151,28 @@
     }
 
     const renderFromHash = (hash = location.hash) => {
-      const specifier = hash && decodeURIComponent(hash.slice(1));
-      specifier && renderFromURL(specifier);
+      // const match = /#(.*?)(?=\!(\d+)|$)/.exec(hash);
+      const match = /#(.*?)(?:\!([a-z]+))?(?:\*(\d+))?$/.exec(hash);
+      const [,specifier, type, repeats = options.repeats] = match || '';
+      const sourceType = (type && `text/${type}`) || undefined;
+      repeats >= 1 && (options.repeats = parseInt(repeats) - 1);
+      console.log(match, {specifier, type, repeats})
+      // const specifier = hash && decodeURIComponent(hash.slice(1));
+      specifier && renderFromURL(specifier, sourceType);
     };
 
     window.addEventListener('hashchange', () => renderFromHash());
 
     requestAnimationFrame(() => renderFromHash(location.hash !== '#' && location.hash || `#${defaults.sourceURL}`));
+
+
+
+    // const renderMarkup = (target, sourceText, markupOptions) => {
+    //   const nodes = sourceText ? [...  markup(sourceText, markupOptions)] : [];
+    //   while (nodes.length > 500) target.append(... nodes.splice(0, 500));
+    //   nodes.length && target.append(... nodes);
+    //   return nodes;
+    // }
 
   </script>
 </body>
