--- a/markup.html
+++ b/markup.html
@@ -47,6 +47,9 @@
       margin: 0;
       max-width: 100%;
       flex: 1;
+      word-break: normal;
+      line-break: strict;
+      contain: layout content;
     }
 
     #source-code > header {
@@ -58,19 +61,31 @@
       margin-bottom: 1ch;
       opacity: 0.8;
       border-radius: 1ch;
+      overflow: hidden;
+      contain: layout content;
+      user-select: none;
+      pointer-events: none;
     }
 
   </style>
+
+  <link id=leo-routes rel="sample" href="./samples/pholio-routes-profile.js" />
+  <link id=esprima rel="sample" href="https://cdnjs.cloudflare.com/ajax/libs/esprima/2.7.3/esprima.js" />
+  <link id=babel-core rel="sample" href="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.js" />
+  <link id=babel-core-min rel="sample" href="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js" />
+  <link id=popper rel="sample" href="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/esm/popper.js" />
+  <link id=xregexp rel="sample" href="https://cdnjs.cloudflare.com/ajax/libs/xregexp/3.2.0/xregexp-all.js" />
+  <link id=xregexp-min rel="sample" href="https://cdnjs.cloudflare.com/ajax/libs/xregexp/3.2.0/xregexp-all.min.js" />
 </head>
 
 <body>
   <pre id="source-code"></pre>
   <script type=module>
-    import {markup} from './markup.js';
+    import markup from './markup.js';
 
     const defaults = {
-      repeats: 0,
-      iterations: 0,
+      repeats: 1,
+      iterations: 1,
       sourceURL: './lib/markup.js',
       sourceType: undefined,
       element: 'pre#source-code',
@@ -109,16 +124,19 @@
     // let defaultSoutceType = location.search && location.search.slice(1);
 
     const renderMarkup = (sourceText, markupOptions) => {
-      const target = document.createDocumentFragment();
-      const nodes = markup(`${sourceText}\n`, markupOptions);
-      // sourceText ? [...  markup(sourceText, markupOptions)] : [];
-      if (target.append) {
-        while (nodes.length > 500) target.append(... nodes.splice(0, 500));
-        nodes.length && target.append(... nodes);
-      } else if (target.appendChild) {
-        for (const node of nodes) target.appendChild(node);
-      }
-      return target;
+      markupOptions.fragment = document.createDocumentFragment();
+      return markup.render(sourceText, markupOptions)
+      // const target = document.createDocumentFragment();
+
+      // const nodes = markup(`${sourceText}\n`, markupOptions);
+      // // sourceText ? [...  markup(sourceText, markupOptions)] : [];
+      // if (target.append) {
+      //   while (nodes.length > 500) target.append(... nodes.splice(0, 500));
+      //   nodes.length && target.append(... nodes);
+      // } else if (target.appendChild) {
+      //   for (const node of nodes) target.appendChild(node);
+      // }
+      // return target;
     }
 
     const renderFromURL = async (specifier, sourceType) => {
@@ -138,7 +156,15 @@
 
         await nextFrame();
 
-        sourceCodeElement.innerHTML = `<header><center><label>source=<q><em>${specifier}</em></q></label>  <label>type=<q><em>${sourceType}</em></q></label>  <label>repeats=<em>${(repeats || 0) + 1}</em></label><span id=repeats></span>  <label>iterations=<em>${(iterations || 0) + 1}</em></label><span id=iterations></span> — <b><span id=status> Rendering</span></b><span id=render></span></center></header>`;
+        sourceCodeElement.innerHTML = `<header><center><small>${
+          `<q>${specifier}</q>`
+        } [${
+          sourceType
+        }] &times; ${repeats || 0}${
+          `<span id=repeats></span>`
+        } — ${
+          `<b><span id=status>Rendering</span></b><span id=render></span><span id=iterations></span>`
+        }</small></center></header>`;
 
         const status = sourceCodeElement.querySelector('#status');
         const renderStatus = sourceCodeElement.querySelector('#render');
@@ -151,30 +177,31 @@
         let start = Date.now();
         const elapsed = (last = start) => Math.round(10 * ((start = Date.now()) - last))/10;
 
-        const fragment = renderMarkup(sourceText, markupOptions);
-        timing.render = elapsed();
-
-        sourceCodeElement.appendChild(fragment);
+        let fragment = sourceCodeElement;
 
         if (repeats > 0) {
-          status.innerText = `Repeating`;
-          await nextFrame();
-          start = Date.now();
-          // const hr = document.createElement('hr');
-          // sourceCodeElement.appendChild(hr.cloneNode())
-          for (let n = repeats; n--; sourceCodeElement.appendChild(renderMarkup(sourceText, markupOptions))); //  n % 10 || await nextFrame();
-          timing.repeats = elapsed();
-          repeatStatus && timing.repeats && (repeatStatus.innerText = ` ~${timing.repeats}ms`);
+          fragment = renderMarkup(sourceText, markupOptions);
+          timing.render = elapsed();
+
+          sourceCodeElement.appendChild(fragment);
+
+          if (repeats > 1) {
+            status.innerText = `Repeating`;
+            await nextFrame();
+            start = Date.now();
+            for (let n = repeats; --n; sourceCodeElement.appendChild(renderMarkup(sourceText, markupOptions))); //  n % 10 || await nextFrame();
+            timing.repeats = elapsed();
+            repeatStatus && timing.repeats && (repeatStatus.innerText = ` ~${timing.repeats}ms`);
+          }
         }
 
-        if (iterations > 0) {
+        if (iterations > 1) {
           status.innerText = `Iterating`;
           await nextFrame();
           start = Date.now();
-          // for (let n = iterations; n--; [...  markup(sourceText, markupOptions)]);
-          for (let n = iterations; n--; markup(sourceText, markupOptions));
+          for (let n = iterations; n--; [... markup.tokenize(sourceText, markupOptions)]);
           timing.iterations = elapsed();
-          iterationStatus && timing.iterations && (iterationStatus.innerText = ` ~${timing.iterations}ms`);
+          iterationStatus && timing.iterations && (iterationStatus.innerText = ` (~${timing.iterations}ms / ${iterations})`);
         }
         // let times = `~ ${timing.rendered} ms${timing.repeats ? ` * ${repeats + 1} ~= ${timing.repeats} ms` : ''}${timing.iterations ? ` ** ${iterations + 1} ~= ${timing.iterations} ms` : ''}`;
         status.innerText = 'Done';
@@ -192,11 +219,13 @@
       const match = /#(.*?)(?:\!([a-z]+))?(?:\*(\d+))?(?:\*{2}(\d+))?$/.exec(hash);
       const [,specifier, type, repeats = defaults.repeats, iterations = defaults.iterations] = match || '';
       const sourceType = (type && `text/${type}`) || undefined;
-      options.repeats = repeats >= 1 ? parseInt(repeats) - 1 : defaults.repeats;
-      options.iterations = iterations >= 1 ? parseInt(iterations) - 1 : defaults.iterations;
-      console.log(match, {specifier, type, repeats, iterations});
+      options.repeats = repeats >= 0 ? parseInt(repeats) : defaults.repeats;
+      options.iterations = iterations >= 1 ? parseInt(iterations) : defaults.iterations;
+      const link = /^\w[\w\-]*$/.test(specifier) && document.querySelector(`link#${specifier}`);
+      const source = link && link.href || specifier;
+      console.log(match, {specifier, link, source, type, repeats, iterations});
       // const specifier = hash && decodeURIComponent(hash.slice(1));
-      specifier && renderFromURL(specifier, sourceType);
+      specifier && renderFromURL(source, sourceType);
     };
 
     window.addEventListener('hashchange', () => renderFromHash());
@@ -213,7 +242,7 @@
     // }
 
   </script>
-  <script>
+  <script src>
     {
       let worker;
       try {
